1.0.0 (currently working on)
- [#3548] Feature: Use flash messages in the BE module
- [#3930] Fix: Typo in the reference: boh -> both
- [#3920] Fix: Crash on the second registration page
- [#3910] Feature: Load records from the current page and its subpages in the grids
- [#3914] Fix: Spelling, punctuation and grammar errors and inconsistencies in manual (thanks to Christian Hennecke)
- [#3911] Change: Attached files should be combined from the topic and date record
- [#3902] Feature: Add icons for the registration, speaker and organizer records in the grids
- [#3904] Feature: Load the stores of the grids after the grid is rendered for the first time
- [#3881] Feature: Add a context menu to the organizers grid
- [#3880] Feature: Add a context menu to the speakers grid
- [#3894] Feature: Add a context menu to the registrations grid
- [#1879] Fix: Don't use &= or |= for booleans
- [#3851] Fix: CSV export for events from the BE ignores event record in subfolders
- [#3882] Feature: Respect the back-end user rights in the ExtJS back-end module
- [#3870] Change: tx_oelib_List should use an SplObjectStorage
- [#3895] Change: Make the BE module testable
- [#3893] Fix: returnUrls needs to get encoded
- [#3886] Feature: Integrate the CSV export functions
- [#3827] Feature: Use ExtJS in the back-end module
- [#3874] Fix: Test failures in the registration manager testcase
- [#3872] Feature: Add a hook for modifying the "my events" list row
- [#3877] Fix: pi1::isLoggedIn must be public
- [#3222] Feature: Model the "additional attendees" as a 1:n relation from registrations to FE users
- [#3849] Feature: Use separate labels for the first name and last name in the registration form
- [#3861] Cleanup: Drop our own exception handlers in seminars
- [#3850] Fix: Non-admin users have no "edit" icon for registrations in the BE module
- [#3809] Fix: Salutation in thank-you e-mails is formal although informal is configured