@@ -175,7 +175,7 @@
 			<label index="tx_seminars_organizers.description">Description:</label>
 			<label index="tx_seminars_organizers.homepage">Homepage:</label>
 			<label index="tx_seminars_organizers.email">E-mail address:</label>
-			<label index="tx_seminars_organizers.email_footer">Footer text for confirmation e-mails:</label>
+			<label index="tx_seminars_organizers.email_footer">Footer text to be appended to all e-mails from this organizer:</label>
 			<label index="tx_seminars_organizers.attendances_pid">SysFolder to store the registration records in:</label>
 			<label index="tx_seminars_payment_methods">Methods of payment</label>
 			<label index="tx_seminars_payment_methods.title">Title:</label>
@@ -396,7 +396,7 @@
 			<label index="tx_seminars_organizers.description">Beschreibung:</label>
 			<label index="tx_seminars_organizers.homepage">Homepage:</label>
 			<label index="tx_seminars_organizers.email">E-Mail-Adresse:</label>
-			<label index="tx_seminars_organizers.email_footer">Text, der an Bestätigungsmails angehängt wird:</label>
+			<label index="tx_seminars_organizers.email_footer">Text, der allen Mails dieses Veranstalters angehängt wird:</label>
 			<label index="tx_seminars_organizers.attendances_pid">SysOrdner, in dem die Anmeldungen gespeichert werden sollen:</label>
 			<label index="tx_seminars_payment_methods">Zahlungsarten</label>
 			<label index="tx_seminars_payment_methods.title">Titel:</label>
@@ -1425,7 +1425,7 @@
 			<label index="tx_seminars_organizers.description" type="integer">218120871</label>
 			<label index="tx_seminars_organizers.homepage" type="integer">78145407</label>
 			<label index="tx_seminars_organizers.email" type="integer">126760538</label>
-			<label index="tx_seminars_organizers.email_footer" type="integer">182634979</label>
+			<label index="tx_seminars_organizers.email_footer" type="integer">225573759</label>
 			<label index="tx_seminars_organizers.attendances_pid" type="integer">122914734</label>
 			<label index="tx_seminars_payment_methods" type="integer">175386290</label>
 			<label index="tx_seminars_payment_methods.title" type="integer">85903807</label>
@@ -2451,7 +2451,7 @@
 			<label index="tx_seminars_organizers.description">Description:</label>
 			<label index="tx_seminars_organizers.homepage">Homepage:</label>
 			<label index="tx_seminars_organizers.email">E-mail address:</label>
-			<label index="tx_seminars_organizers.email_footer">Footer text for confirmation e-mails:</label>
+			<label index="tx_seminars_organizers.email_footer">Footer text to be appended to all e-mails from this organizer:</label>
 			<label index="tx_seminars_organizers.attendances_pid">SysFolder to store the registration records in:</label>
 			<label index="tx_seminars_payment_methods">Methods of payment</label>
 			<label index="tx_seminars_payment_methods.title">Title:</label>
