@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#3839] Fix: Clarify the label for the organizer footer (thanks to Philipp Gampe)
 - [#3548] Feature: Use flash messages in the BE module
 - [#3930] Fix: Typo in the reference: boh -> both
 - [#3920] Fix: Crash on the second registration page
